# LUCE-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Debug.cpp  Debug.h  Defs-internal.h  Defs.h  LICENSE  LUCE.cpp  LUCE.h  LUCEApplication.h  Macros.h  README.md  WinMainHelper.h
JuceLibraryCode/: JuceHeader.h
adapters/core/: JUCEApplication.cpp  JUCEApplication.h  LUCEApplication.cpp  LUCEApplication.h  LocalisedStrings.cpp  String.cpp  String.h  core.cpp  core.h
adapters/core/utils/: LUCEApplication.cpp  LUCEApplication.h
adapters/graphics/: Colour.cpp  Colour.h  Graphics_.cpp  PointFloat.cpp  PointInt.cpp  RectangleFloat.cpp  RectangleInt.cpp  graphics.cpp  graphics.h
adapters/gui/: AlertWindow.cpp  ComboBox.cpp  Component.cpp  Desktop.cpp  DocumentWindow.cpp  DocumentWindow.h  Label.cpp  LookAndFeel.cpp  MouseEvent.cpp  MouseWheelDetails.cpp  PopupMenu.cpp  ResizableWindow.cpp  TextButton.cpp  gui.cpp  gui.h
adapters/gui/utils/: Component.cpp  Component.h  DocumentWindow.cpp  DocumentWindow.h  IconManager.cpp  IconManager.h
app/: demo1.lua  demo2.lua  demo3.lua
app/lua/luce/: AlertWindow.lua  Colour.lua  Colours.lua  ComboBox.lua  Debug.lua  DocumentWindow.lua  Flag.lua  FlowComponent.lua  FlowWindow.lua  Justification.lua  LUCEApplication.lua  PopupMenu.lua  QuickComponent.lua  ResizableWindow.lua  TextButton.lua  TitleBarButtons.lua
app/lua/ui/: demo2-off.lua  demo2.lua
cmake/: FindReadline.cmake  LuaConfig.cmake.in  LuaPaths.cmake
extras/demo1/: demo1.cpp
extras/demo1/lua/: demo1.lua
extras/demo2/: demo2.cpp
extras/demo3/: demo3.cpp
flowUI/: FlowComponent.cpp  FlowStyle.cpp  FlowWindow.cpp  flowUI.cpp  flowUI.h
flowUI/utils/: FlowComponent.cpp  FlowComponent.h  FlowContainer.cpp  FlowContainer.h  FlowContainerResizer.cpp  FlowContainerResizer.h  FlowGrid.cpp  FlowGrid.h  FlowManager.cpp  FlowManager.h  FlowMenu.cpp  FlowMenu.h  FlowStyle.cpp  FlowStyle.h  FlowWindow.cpp  FlowWindow.h  FlowWindowContent.cpp  FlowWindowContent.h  FlowWindowHub.cpp  FlowWindowHub.h
quickUI/: QuickComponent.cpp  quickUI.cpp  quickUI.h
quickUI/utils/: QuickComponent.cpp  QuickComponent.h
